ToLatex/target/generated-sources/antlr4/DS3Lab/BerylToLatex/ToLatexParser.java
// Generated from DS3Lab/BerylToLatex/ToLatex.g4 by ANTLR 4.5.3
package DS3Lab.BerylToLatex;

import java.io.*;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ToLatexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, ID=20, STRING=21, INT=22, FLOAT=23, WS=24;
	public static final int
		RULE_program = 0, RULE_index = 1, RULE_set_index = 2, RULE_var_desc = 3, 
		RULE_var_range = 4, RULE_statement = 5, RULE_const_def = 6, RULE_schema = 7, 
		RULE_tensor = 8, RULE_assignment = 9, RULE_expression = 10, RULE_expression_m = 11, 
		RULE_expression_o = 12, RULE_expression_t = 13, RULE_params = 14, RULE_feed = 15, 
		RULE_evaluation = 16, RULE_num = 17;
	public static final String[] ruleNames = {
		"program", "index", "set_index", "var_desc", "var_range", "statement", 
		"const_def", "schema", "tensor", "assignment", "expression", "expression_m", 
		"expression_o", "expression_t", "params", "feed", "evaluation", "num"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "','", "'}'", "'='", "'...'", "':='", "'in'", "'^'", "'_'", 
		"'+'", "'-'", "'*'", "'.'", "'/'", "'''", "'('", "')'", "'~'", "'min'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "ID", "STRING", "INT", 
		"FLOAT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ToLatex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	FileWriter open(String s) {
	    try {
	        return new FileWriter(s, false);
	    }
	    catch (IOException e) {
	        throw new ParseCancellationException(e);
	    }
	}

	FileWriter f = open("latex.txt");

	void wr(String s) {
	    try {
	        f.write(s);
	        f.flush();
	    }
	    catch (IOException e) {
	        throw new ParseCancellationException(e);
	    }
	}

	public ToLatexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			            wr("\\documentclass{article}\n\\usepackage{CJK}\n\\usepackage{amsmath}\n\\pagestyle{empty}\n\\allowdisplaybreaks\n\\begin{document}\n\\begin{align*}\n");
			        
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__15) | (1L << T__18) | (1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				{
				 wr("&  "); 
				setState(38);
				statement();
				 wr(" \\\\\n"); 
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			            wr("\\end{align*}\n\\end{document}\n");
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ToLatexParser.ID, 0); }
		public TerminalNode INT() { return getToken(ToLatexParser.INT, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterIndex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitIndex(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_index);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_indexContext extends ParserRuleContext {
		public IndexContext index;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public Set_indexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterSet_index(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitSet_index(this);
		}
	}

	public final Set_indexContext set_index() throws RecognitionException {
		Set_indexContext _localctx = new Set_indexContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_set_index);
		int _la;
		try {
			setState(67);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(T__0);
				wr("{ ");
				setState(52);
				expression(0);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(53);
					match(T__1);
					wr(", ");
					setState(55);
					expression(0);
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(61);
				match(T__2);
				wr("} ");
				}
				break;
			case ID:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				((Set_indexContext)_localctx).index = index();
				wr((((Set_indexContext)_localctx).index!=null?_input.getText(((Set_indexContext)_localctx).index.start,((Set_indexContext)_localctx).index.stop):null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_descContext extends ParserRuleContext {
		public List<Var_rangeContext> var_range() {
			return getRuleContexts(Var_rangeContext.class);
		}
		public Var_rangeContext var_range(int i) {
			return getRuleContext(Var_rangeContext.class,i);
		}
		public Var_descContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_desc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterVar_desc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitVar_desc(this);
		}
	}

	public final Var_descContext var_desc() throws RecognitionException {
		Var_descContext _localctx = new Var_descContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_desc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			var_range();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(70);
				match(T__1);
				wr(", \\ ");
				setState(72);
				var_range();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_rangeContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(ToLatexParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Var_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterVar_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitVar_range(this);
		}
	}

	public final Var_rangeContext var_range() throws RecognitionException {
		Var_rangeContext _localctx = new Var_rangeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			((Var_rangeContext)_localctx).ID = match(ID);
			wr((((Var_rangeContext)_localctx).ID!=null?((Var_rangeContext)_localctx).ID.getText():null));
			setState(80);
			match(T__3);
			wr("=");
			setState(82);
			expression(0);
			setState(83);
			match(T__4);
			wr("...");
			setState(85);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Const_defContext const_def;
		public Const_defContext const_def() {
			return getRuleContext(Const_defContext.class,0);
		}
		public SchemaContext schema() {
			return getRuleContext(SchemaContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FeedContext feed() {
			return getRuleContext(FeedContext.class,0);
		}
		public EvaluationContext evaluation() {
			return getRuleContext(EvaluationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((StatementContext)_localctx).const_def = const_def();
				wr((((StatementContext)_localctx).const_def!=null?_input.getText(((StatementContext)_localctx).const_def.start,((StatementContext)_localctx).const_def.stop):null));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				schema();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				assignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				feed();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				evaluation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ToLatexParser.ID, 0); }
		public TerminalNode INT() { return getToken(ToLatexParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ToLatexParser.FLOAT, 0); }
		public Const_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterConst_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitConst_def(this);
		}
	}

	public final Const_defContext const_def() throws RecognitionException {
		Const_defContext _localctx = new Const_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(ID);
			setState(97);
			match(T__5);
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaContext extends ParserRuleContext {
		public TensorContext tensor;
		public Token ID;
		public List<TensorContext> tensor() {
			return getRuleContexts(TensorContext.class);
		}
		public TensorContext tensor(int i) {
			return getRuleContext(TensorContext.class,i);
		}
		public TerminalNode ID() { return getToken(ToLatexParser.ID, 0); }
		public Set_indexContext set_index() {
			return getRuleContext(Set_indexContext.class,0);
		}
		public Var_descContext var_desc() {
			return getRuleContext(Var_descContext.class,0);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitSchema(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((SchemaContext)_localctx).tensor = tensor();
			wr((((SchemaContext)_localctx).tensor!=null?_input.getText(((SchemaContext)_localctx).tensor.start,((SchemaContext)_localctx).tensor.stop):null)+' ');
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(102);
				match(T__1);
				wr(",\\ ");
				setState(104);
				((SchemaContext)_localctx).tensor = tensor();
				wr((((SchemaContext)_localctx).tensor!=null?_input.getText(((SchemaContext)_localctx).tensor.start,((SchemaContext)_localctx).tensor.stop):null)+ ' ');
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(T__6);
			wr("\\in ");
			setState(114);
			((SchemaContext)_localctx).ID = match(ID);
			wr((((SchemaContext)_localctx).ID!=null?((SchemaContext)_localctx).ID.getText():null));
			setState(119);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(116);
				match(T__7);
				wr("^");
				setState(118);
				set_index();
				}
			}

			setState(124);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(121);
				match(T__1);
				wr(",\\  ");
				setState(123);
				var_desc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TensorContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ToLatexParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ToLatexParser.ID, i);
		}
		public TensorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tensor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterTensor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitTensor(this);
		}
	}

	public final TensorContext tensor() throws RecognitionException {
		TensorContext _localctx = new TensorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tensor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(ID);
			setState(141);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(127);
				match(T__8);
				setState(139);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(128);
					match(ID);
					}
					break;
				case T__0:
					{
					setState(129);
					match(T__0);
					setState(130);
					match(ID);
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__1) {
						{
						{
						setState(131);
						match(T__1);
						setState(132);
						match(ID);
						}
						}
						setState(137);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(138);
					match(T__2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(ToLatexParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Set_indexContext set_index() {
			return getRuleContext(Set_indexContext.class,0);
		}
		public Var_descContext var_desc() {
			return getRuleContext(Var_descContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			((AssignmentContext)_localctx).ID = match(ID);
			wr((((AssignmentContext)_localctx).ID!=null?((AssignmentContext)_localctx).ID.getText():null));
			setState(148);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(145);
				match(T__8);
				wr("_");
				setState(147);
				set_index();
				}
			}

			setState(150);
			match(T__3);
			wr("\\ =\\ ");
			setState(152);
			expression(0);
			setState(156);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(153);
				match(T__1);
				wr(",\\ ");
				setState(155);
				var_desc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression_mContext expression_m() {
			return getRuleContext(Expression_mContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(159);
			expression_m(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(171);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(169);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(161);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(162);
						match(T__9);
						wr("+");
						setState(164);
						expression_m(0);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(165);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(166);
						match(T__10);
						wr("-");
						setState(168);
						expression_m(0);
						}
						break;
					}
					} 
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Expression_mContext extends ParserRuleContext {
		public Expression_oContext expression_o() {
			return getRuleContext(Expression_oContext.class,0);
		}
		public Expression_mContext expression_m() {
			return getRuleContext(Expression_mContext.class,0);
		}
		public Expression_mContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_m; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).enterExpression_m(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToLatexListener ) ((ToLatexListener)listener).exitExpression_m(this);
		}
	}

	public final Expression_mContext expression_m() throws RecognitionException {
		return expression_m(0);
	}

	private Expression_mContext expression_m(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_mContext _localctx = new Expression_mContext(_ctx, _parentState);
		Expression_mContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_expression_m, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(175);
			expression_o();
			}
			_ctx.stop = _input.LT(-1);
			setState(191);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(189);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						_localctx = new Expression_mContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression_m);
						setState(177);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(178);
						match(T__11);
						wr("*");
						setState(180);
						expression_o();
						}
						break;
					case 2:
						{
						_localctx = new Expression_mContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression_m);
						setState(181);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(182);
						match(T__12);
						wr("\\cdot ");
						setState(184);
						expression_o();
						}
						break;
					case 3:
						{
						_localctx = new Expression_mContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression_m);
						setState(185);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(186);
						match(T__13);
						wr("/");
						setState(188);
						expression_o();
						}
						break;
					}
					} 
				}
				setState(193);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
